package NYT.NObjectClient.NProto;

import "yt/core/misc/proto/guid.proto";
import "yt/core/ytree/proto/attributes.proto";
import "yt/ytlib/node_tracker_client/node_directory.proto";
import "yt/ytlib/hive/cluster_directory.proto";
import "yt/ytlib/chunk_client/medium_directory.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqCreateObject
{
    required int32 type = 1;
    optional NYT.NYTree.NProto.TAttributeDictionary object_attributes = 2;
}

message TRspCreateObject
{
    required NYT.NProto.TGuid object_id = 1;
}

////////////////////////////////////////////////////////////////////////////////

message TReqGetClusterMeta
{
    optional bool populate_node_directory = 1;
    optional bool populate_cluster_directory = 2;
    optional bool populate_medium_directory = 3;
}

message TRspGetClusterMeta
{
    optional NNodeTrackerClient.NProto.TNodeDirectory node_directory = 1;
    optional NHiveClient.NProto.TClusterDirectory cluster_directory = 2;
    optional NChunkClient.NProto.TMediumDirectory medium_directory = 3;
}

////////////////////////////////////////////////////////////////////////////////
